[gd_scene load_steps=5 format=3 uid="uid://drw0mk0vsbgrg"]

[ext_resource type="Script" uid="uid://c6w1bse6ldhov" path="res://src/actors/player/ui/status_effects/status_effect_ui.gd" id="1_71nsl"]
[ext_resource type="FontFile" uid="uid://dnlfjy7j2gd3n" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="3_7csij"]
[ext_resource type="FontFile" uid="uid://dmcjflisd3gnl" path="res://assets/fonts/deltarune.ttf" id="4_msac0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3cfuc"]
region = Rect2(16, 144, 48, 48)

[node name="StatusEffectUI" type="HBoxContainer"]
custom_minimum_size = Vector2(256, 48)
offset_right = 256.0
offset_bottom = 48.0
size_flags_vertical = 6
alignment = 1
script = ExtResource("1_71nsl")

[node name="IconTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("AtlasTexture_3cfuc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_7csij")
theme_override_font_sizes/font_size = 16

[node name="TimerLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_msac0")
theme_override_font_sizes/font_size = 16
text = "3:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 90.0
show_percentage = false
